Updated parameters to structured bundle request and added referenced resources to bundle